<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="action_delete">Delete Item</string>
    <string name="action_save">Save Item</string>
    <string name="item_name">Item Name:</string>
    <string name="hint_item_name">Name</string>
    <string name="hint_item_price">Price</string>
    <string name="category_price">Price:</string>
    <string name="category_description">Description:</string>
    <string name="hint_item_description">Description</string>
    <string name="category_image">Image:</string>
    <string name="image_button">Choose Image</string>
    <string name="category_quantity">Quantity:</string>
    <string name="sale">Sale</string>
    <string name="minus1">-1</string>
    <string name="plus1">+1</string>
    <string name="order">Order</string>
    <string name="editor_activity_title_new_pet">New Item</string>
    <string name="editor_activity_title_edit_pet">Edit Item</string>
    <string name="editor_insert_item_failed">Item could not be inserted</string>
    <string name="editor_insert_item_successful">Item inserted successfully</string>
    <string name="unsaved_changes_dialog_msg">Unsaved Changes</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Edit again</string>
    <string name="delete_dialog_msg">Delete</string>
    <string name="delete">Yes, delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_pet_failed">Item could not be deleted</string>
    <string name="editor_delete_pet_successful">Item had been deleted</string>
    <string name="empty_view_title_text">No items found</string>
    <string name="empty_view_subtitle_text">Please add new items</string>
    <string name="emailSubject">Order</string>
    <string name="order_from_supplier">Order more:</string>
    <string name="invalid_quantity">Please provide valid quantity!</string>
    <string name="name_required">Item requires name!</string>
    <string name="quantity_required">Item requires quantity!</string>
    <string name="price_required">Item requires price!</string>
    <string name="image_required">Item requires an image!</string>
    <string name="picture_select">Select Picture</string>
    <string name="image_load_failed">Failed to load image.</string>
    <string name="quantity_below_zero"><![CDATA[Quantity has to be > 0!]]></string>
</resources>