<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <LinearLayout
        android:id="@+id/container_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_margin="5dp"
            android:layout_width="125dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:textSize="20sp"
                android:id="@+id/edit_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/category_description"
            android:layout_margin="5dp"
            android:layout_width="125dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item_description"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/category_quantity"
            android:layout_margin="5dp"
            android:layout_width="125dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quantity_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus1" />

            <EditText
                android:id="@+id/quantity"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"/>

            <Button
                android:id="@+id/quantity_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_margin="5dp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/category_price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item_price"
                android:inputType="number"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_margin="5dp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/category_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/current_image"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/choose_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_button" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_margin="5dp"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/order_from_supplier"/>



    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order" />

</LinearLayout>
</LinearLayout>